--- a/react-draft-codox/codox-draft-basic/client/package.json
+++ b/react-draft-codox/codox-draft-basic/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@codoxhq/codox-provider": "^1.0.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.11.4",
