--- a/react-draft-codox/codox-draft-extended/client/package.json
+++ b/react-draft-codox/codox-draft-extended/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@codoxhq/codox-provider": "^1.0.1",
     "@draft-js-plugins/editor": "^4.1.3",
     "@draft-js-plugins/image": "^4.1.3",
     "@draft-js-plugins/linkify": "^4.2.1",
